[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "polling"
harness = false

[[bench]]
name = "tokio_polling"
harness = false

[[bench]]
name = "channel_polling"
harness = false

[[bench]]
name = "receive_data"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false

[dependencies]
rustc-hash = "2.1.0"
ahash = "0.8"   
static-id = "0.3"
criterion = {version = "0.5", features = ["async_tokio"]}
serde_json = "1.0"
once_cell = "1.8"
flashlog = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
crossbeam-channel = "0.5"